updating separation values

--- a/paper/ms.tex
+++ b/paper/ms.tex
@@ -58,6 +58,10 @@ multimodal morphologies with displacements between the dark matter
 clumps equal or larger to $\sim 400$\hkpc, which corresponds to the
 observational constraint the object SL2S J08544-0121 located at
 $z=0.35$. 
+
+$133\pm21$\hkpc DM-DM separation
+$87 \pm 14$\hkpc DM-baryon separation.
+ 
 \end{abstract}
 
 \begin{keywords}
