--- a/paper/ms.tex
+++ b/paper/ms.tex
@@ -52,12 +52,15 @@
 
 We estimate the expected distribution of displacements between the two
 dominant dark matter peaks in halos within a mass range corresponding
-to galaxy groups. We find that 5\% to 25\% of the dark matter systems
+to galaxy groups. We find that 50\% to 60\% of the dark matter systems
 with circular velocities in the range $300\kms$ to $700\kms$ show
 multimodal morphologies with displacements between the dark matter
-clumps equal or larger to $\sim 400$\hkpc, which corresponds to the
+clumps equal or larger than $133\pm21$\hkpc, which corresponds to the
 observational constraint the object SL2S J08544-0121 located at
-$z=0.35$. 
+$z=0.35$. Using the same data we estimate the DM-baryon separation and
+find that that $0.1\%$ to $1.0\%$ of the same systems should present
+separations equal or larger than $87\pm 14$\hkpc corresponding to the
+same observational benchmark. 
 
 $133\pm21$\hkpc DM-DM separation
 $87 \pm 14$\hkpc DM-baryon separation.
