abstract and results

--- a/paper/ms.tex
+++ b/paper/ms.tex
@@ -51,20 +51,23 @@
 \begin{abstract}
 
 We estimate the expected distribution of displacements between the two
-dominant dark matter peaks in halos within a mass range corresponding
-to galaxy groups. We find that 50\% to 60\% of the dark matter systems
-with circular velocities in the range $300\kms$ to $700\kms$ show
-multimodal morphologies with displacements between the dark matter
-clumps equal or larger than $133\pm21$\hkpc, which corresponds to the
-observational constraint the object SL2S J08544-0121 located at
-$z=0.35$. Using the same data we estimate the DM-baryon separation and
-find that that $0.1\%$ to $1.0\%$ of the same systems should present
-separations equal or larger than $87\pm 14$\hkpc corresponding to the
-same observational benchmark. 
-
-$133\pm21$\hkpc DM-DM separation
-$87 \pm 14$\hkpc DM-baryon separation.
- 
+dominant dark matter peaks in two groups of halos corresponding to
+galaxy groups and clusters. We find that 50\% to 60\% of the dark
+matter  with circular velocities in the range $300\kms$ to $700\kms$
+(groups) show multimodal morphologies with displacements between the
+dark matter clumps equal or larger than $133\pm21$\hkpc, which
+corresponds to the observational constraint the object SL2S
+J08544-0121 located at $z=0.35$ which hass a velocity dispersion of
+$644^{+69}_{-102}\kms$. For dark matter halos with circular velocities
+larger than $700\kms$ (clusters) this fraction rises to $80\%$ to
+$85\%$. Using the same simulation we estimate the dark
+matter-to-baryon spatial separation and find that that $0.1\%$ to
+$1.0\%$ of the low mass systems should present separations equal or
+larger than $87\pm 14$\hkpc corresponding to the same observational
+benchmark; for halos with circular velocities larger than $700\kms$
+this fraction is in the range of $4\%$ to $10\%$, consistent with
+previous studies of dark mattter to baryon separations in
+clusters. These results present a weak dependence with redshift. 
 \end{abstract}
 
 \begin{keywords}
@@ -208,27 +211,27 @@ kind of interactions observed in the Bolshoi simulation.
 
 \begin{figure*}
 \begin{center}
-\includegraphics[width=0.9\textwidth]{Figures_eps/figure_2.eps}
+\includegraphics[width=0.9\textwidth]{figure_1.eps}
 \end{center}
 \caption{
   Integrated probability distribution for the displacement
-  between the host halo and its dominand sub-halo. The left panel
-  shows the results in terms of the physical displacements and the
-  right panel the same displacement normalized by the virial radius of
+  between the host halo and its largest sub-halo. The left panel
+  shows the results in terms of the physical displacements while
+  the right panel shows the displacements normalized by the virial radius of
   the host halo. The continuous line corrresponds to the halos in the
   group sample $V_{\rm circ,host}>700\kms$ and the dashed lines to the
   sample $V_{\rm circ,host}<700\kms$.
-  The vertical stripe corresponds to the estimate of the separation
+  The vertical lines corresponds to mean estimate separation 
   between the two dark matter clumps in the results reported by
-  \citet{Gastaldello} for the group SL2S J08544-0121. The right panel
-  shows the same results normalized by the virial radius of the host
-  halo.} 
+  \citet{Gastaldello} for the group SL2S J08544-0121. Between $50\%$
+  to $60\%$ of the groups show a displacement equal or larger than
+  this observational benchmark.}
 \label{fig:displacement}
 \end{figure*}
 
 \begin{figure*}
 \begin{center}
-\includegraphics[width=0.9\textwidth]{Figures_eps/figure_5.eps} 
+\includegraphics[width=0.9\textwidth]{figure_2.eps} 
 \end{center}
 \caption{2D histogram in the plane $V_{\rm c,sub}/V_{\rm
     c,host}$-$d_{2D}$. The left panel corresponds to groups and the
@@ -291,7 +294,7 @@ data presented by \cite{Gastaldello}.
 
 \begin{figure*}
 \begin{center}
-\includegraphics[width=0.9\textwidth]{Figures_eps/figure_3.eps}
+\includegraphics[width=0.9\textwidth]{figure_3.eps}
 \end{center}
 \caption{Integrated probability distribution for the relative velocity of the
 sub-halo with respect to its host. The left panel shows the results
@@ -329,7 +332,7 @@ $c\approx 6$ \citep{Hayashi2006}.
 
 \begin{figure*}
 \begin{center}
-\includegraphics[width=0.9\textwidth]{Figures_eps/figure_4.eps}
+\includegraphics[width=0.9\textwidth]{figure_4.eps}
 \end{center}
 \caption{x}
 \label{fig:geometry}
@@ -365,7 +368,7 @@ secondary infall after apogee.
 
 \begin{figure}
 \begin{center}
-\includegraphics[width=0.5\textwidth]{Figures_eps/figure_7.eps}
+\includegraphics[width=0.5\textwidth]{figure_5.eps}
 \end{center}
 \caption{Integrated probability distribution for the estimated
   baryonic displacements in the group and cluster samples at all redshifts.}
@@ -406,12 +409,26 @@ halos with a displacement $<d_{2D}^{\rm bar}$ can be considered as an
 upper limit. 
 
 The results for the integrated distributions for $>d_{2D}^{\rm bar}$
-are shown in Figure \ref{fig:baryonic_displacements}.[..]
+are shown in Figure \ref{fig:baryonic_displacements}. The dashed lines
+represented the results for groups and the continous lines correspond
+to clusters. As a test of our approach we compare the cluster results
+against the analytic fit provided by \cite{ForeroRomero2010}. This fit
+reproduces the statistics for the DM-baryon separation found for
+clusters more massive than $>10^{14}$\hMsun in a simulation
+that included a description for gas with $8$ times the volume of the
+Bolshoi Simulation. This fit is valid for separations larger than
+$70$\hkpc, beyond that separation we find that it provides a good
+description within a factor of $\sim 2$ of  
 
 
+
+\subsection{Reproducibility of our results}
 In order to facilitate the reproducibility and reuse of our results we
 have made available all the data and the source code available in a public
 repository. [...]  
+
+\section{Observational Implications}
+\label{sec:observations}
 
 
 \section{Conclusions}
