--- a/paper/ms.tex
+++ b/paper/ms.tex
@@ -57,7 +57,7 @@ matter  with circular velocities in the range $300\kms$ to $700\kms$
 (groups) show multimodal morphologies with displacements between the
 dark matter clumps equal or larger than $133\pm21$\hkpc, which
 corresponds to the observational constraint the object SL2S
-J08544-0121 located at $z=0.35$ which hass a velocity dispersion of
+J08544-0121 located at $z=0.35$ which has a velocity dispersion of
 $644^{+69}_{-102}\kms$. For dark matter halos with circular velocities
 larger than $700\kms$ (clusters) this fraction rises to $80\%$ to
 $85\%$. Using the same simulation we estimate the dark
@@ -66,7 +66,7 @@ $1.0\%$ of the low mass systems should present separations equal or
 larger than $87\pm 14$\hkpc corresponding to the same observational
 benchmark; for halos with circular velocities larger than $700\kms$
 this fraction is in the range of $4\%$ to $10\%$, consistent with
-previous studies of dark mattter to baryon separations in
+previous studies of dark matter to baryon separations in
 clusters. These results present a weak dependence with redshift. 
 \end{abstract}
 
@@ -78,10 +78,10 @@ clusters. These results present a weak dependence with redshift.
 
 
 The Bullet Cluster provided a new kind of observational evidence of
-the existece of dark matter. Quantifying the displacement between dark
+the existence of dark matter. Quantifying the displacement between dark
 matter and the dominant baryonic component (hot X-ray emitting gas)
 \citep{ForeroRomero2010} has been used to test the CDM paradigm itself
-by quantifying the substructure velocity requiered to produce such
+by quantifying the substructure velocity required to produce such
 displacement \citep{Hayashi2006} to finally estimate the expected
 abundance of such events in the Universe. 
 
@@ -102,7 +102,7 @@ lower mass systems.
 In this Letter we present prediction for the abundance of group-like
 systems that might show a DM-baryon displacement. To this end we use a
 N-body cosmological simulation with such a resolution that allows us
-to identify multimodal dark matter clumps in the circular velocity
+to identify multi-modal dark matter clumps in the circular velocity
 range $300-700$\kms. 
 
 This paper is organized as the follows. In Section
@@ -110,7 +110,7 @@ This paper is organized as the follows. In Section
 used in this work. We continue in Section \ref{sec:setup} with the
 geometry of the problem at hand and the measurements setup. Next in
 Section \ref{sec:results} we present our results to finish with a
-discussion and conclussion in Sections \ref{sec:discussion} and
+discussion and conclusion in Sections \ref{sec:discussion} and
 \ref{sec:conclussions}. 
 
 
@@ -132,19 +132,21 @@ of particles used for each of the DM component was $2048^3$, resulting
 in a mass resolution of $1.35 \times 10^8$
 M$_{\odot}$h$^{-1}$. \citet{2011ApJ...740..102K}.  
 
-We use halo catalogs constructed using the BDM algorithm. [...] \citep{Riebe2013}.
-
+We use halo catalogs constructed using the BDM algorithm. [...] 
+All the raw data used in this Letter is available through the
+Multidark database \footnote{\texttt{www.multidark.org}}
+\citep{Riebe2013}.  
 
 In the snapshots at redshift $z=0.0,0.25, 0.5$ and $1.0$ there are
-$XX, XX, XX, XX$ host halos with circular velocities $V_{\rm c}>
-300$\kms and $XX, XX, XX, XX$ sub-halos with circular velocities
-$V_{\rm c}>75$\kms. These two sets of halos constitute the basis for
-our analysis.
+$10041, 10346, 10554,$ and $10382$ host halos with circular velocities
+$V_{\rm c}\geq 300$\kms; and $157853, 177331, 195072, 225188$
+sub-halos with circular velocities $V_{\rm c}\geq 75$\kms,
+respectively. These two sets of halos constitute the basis for our
+analysis. 
 
-For each host halo in the sample we find its most massive
-sub-halo. Each pair host/sub-halo is considered as a potential Bullet
-Group and is kept for the measurement and analysis described in the
-next section.
+For each host halo we find its most massive sub-halo. Each pair
+host/sub-halo is considered as a potential Bullet system and is kept
+got the analysis described in the next section.
 
 \section{Bullet Geometry and Measurement Setup}
 \label{sec:setup}
@@ -172,7 +174,7 @@ The bullet-like encounter can be instantaneously described by
 quantities the following quantities the circular velocity of the host
 and the sub-halo, $V_{\rm c,host}$ and $V_{\rm c,  sub}$; the size of
 the host halo $R_{\rm vir}$; the relative position and velocity of the
-substructre, $\vec{v}$ and $\vec{r}$; and the angle between the
+substructure, $\vec{v}$ and $\vec{r}$; and the angle between the
 position and velocity $\mu$. 
 
 As a first approximation there are two quantities that are available
@@ -183,9 +185,9 @@ of view this can be translated into the 2D projected values of
 $||\vec{r}||$, its value relative to the virial radius $D_{\rm off}=
 ||\vec{r}||_{\rm 2D}/R_{\rm vir}$ and the ratio of the circular velocities
 of the two clumps $V_{\rm c,sub}/V_{\rm c,host}$. In a higher degree
-of detail, in order to gaint better insight we use
+of detail, in order to gain better insight we use
 the sub-structure velocity as a fraction of the host's circular
-velocity, $||\vec{r}||/V_{\rm c, host}$, as a mesure of the the strenght
+velocity, $||\vec{r}||/V_{\rm c, host}$, as a measure of the the strength
 of the interaction.  Finally, we also measure the geometry of each
 interaction through the values for $\mu$.
 
@@ -193,7 +195,7 @@ interaction through the values for $\mu$.
 All the physical quantities described above can be used to describe
 the three main stages in a bullet-like encounter. First, the sub-halo
 crosses the virial radius of the host halo starting a head on
-collission, $||\vec{r}||/R_{\rm vir}\approx 1$ and
+collision, $||\vec{r}||/R_{\rm vir}\approx 1$ and
 $\mu\approx<0.0$. Second, as the sub-halo crosses for the first time
 the center of the host halo $||\vec{r}||/R_{\rm vir} < 1.0$ and
 $\mu>0.0$. Third, as the sub-halo reaches apogee and comes back to the
@@ -218,7 +220,7 @@ kind of interactions observed in the Bolshoi simulation.
   between the host halo and its largest sub-halo. The left panel
   shows the results in terms of the physical displacements while
   the right panel shows the displacements normalized by the virial radius of
-  the host halo. The continuous line corrresponds to the halos in the
+  the host halo. The continuous line corresponds to the halos in the
   group sample $V_{\rm circ,host}>700\kms$ and the dashed lines to the
   sample $V_{\rm circ,host}<700\kms$.
   The vertical lines corresponds to mean estimate separation 
@@ -231,11 +233,11 @@ kind of interactions observed in the Bolshoi simulation.
 
 \begin{figure*}
 \begin{center}
-\includegraphics[width=0.9\textwidth]{figure_2.eps} 
+\includegraphics[width=1.0\textwidth]{figure_2.eps} 
 \end{center}
 \caption{2D histogram in the plane $V_{\rm c,sub}/V_{\rm
-    c,host}$-$d_{2D}$. The left panel corresponds to groups and the
-  right panel to clusters. The circle with error bars corresponds to
+    c,host}$-$d_{2D}$. The left panel corresponds to clusters and the
+  right panel to groups. The circle with error bars corresponds to
   \bullg data reported from \citet{2013A&A...552A..80M} and
   \citet{Gastaldello}. The data used to construct the histograms
   integrates the objects at all redshifts. }
@@ -248,8 +250,8 @@ kind of interactions observed in the Bolshoi simulation.
 The main result of this paper is summarized in Figure
 \ref{fig:displacement}, it presents the integrated
 probability distribution for the displacement between the center of
-the host halo and its dominant sub-halo. The left pannel shows
-the displacement in physical units and the right pannel as a fraction
+the host halo and its dominant sub-halo. The left panel shows
+the displacement in physical units and the right panel as a fraction
 of the virial radius of the host halo. 
 
 Figure \ref{fig:displacement} shows the results for two different
@@ -278,7 +280,7 @@ with the galaxy peaks.
 
 To construct this figure we co-add all the halos in the sample (left,
 groups; right, clusters) at all redshifts. We stack the data because
-we do not observe any strong time evolution, aditionally this allows
+we do not observe any strong time evolution, additionally this allows
 us to increase the signal in each bin. Overplotted there is an circle
 with error bars that represents the observational estimates for the
 system \bullg using the fraction in velocity dispersion in
@@ -332,9 +334,11 @@ $c\approx 6$ \citep{Hayashi2006}.
 
 \begin{figure*}
 \begin{center}
-\includegraphics[width=0.9\textwidth]{figure_4.eps}
+\includegraphics[width=1.0\textwidth]{figure_4.eps}
 \end{center}
-\caption{x}
+\caption{2D histograms in the plane $\mu$-$D_{\rm off}$. The left
+  panel corresponds to clusters and the right panel to groups. The data
+  used to construct this histogram includes the halos at all redshifts.}
 \label{fig:geometry}
 \end{figure*}
 
@@ -371,13 +375,17 @@ secondary infall after apogee.
 \includegraphics[width=0.5\textwidth]{figure_5.eps}
 \end{center}
 \caption{Integrated probability distribution for the estimated
-  baryonic displacements in the group and cluster samples at all redshifts.}
+  baryonic displacements in the group and cluster samples. The
+  continuous line marked as $P_{2D}$ shows the statistics reported by
+  \citet{ForeroRomero2010} for a cosmological simulation including DM
+  and baryons. The vertical lines correspond to the mean value and
+  uncertainty of the displacement measured for \bullg.}
 \label{fig:baryonic_displacements}
 \end{figure}
 
 These different collision geometries will produce different results in
 terms of the displacement between dark matter and baryons. Strictly
-speaking, the results we have derived so far, apply to multimodal groups and their
+speaking, the results we have derived so far, apply to multi-modal groups and their
 expected separation between the two dominant dark matter clumps but it
 should not be interpreted that all have a corresponding DM-baryon
 displacement. The systems where the halo is starting to fall into the
@@ -410,7 +418,7 @@ upper limit.
 
 The results for the integrated distributions for $>d_{2D}^{\rm bar}$
 are shown in Figure \ref{fig:baryonic_displacements}. The dashed lines
-represented the results for groups and the continous lines correspond
+represented the results for groups and the continuous lines correspond
 to clusters. As a test of our approach we compare the cluster results
 against the analytic fit provided by \cite{ForeroRomero2010}. This fit
 reproduces the statistics for the DM-baryon separation found for
@@ -425,7 +433,7 @@ description within a factor of $\sim 2$ of
 \subsection{Reproducibility of our results}
 In order to facilitate the reproducibility and reuse of our results we
 have made available all the data and the source code available in a public
-repository. [...]  
+repository\footnote{\texttt{https://github.com/Fernandez-Trincado/Bullet\_Groups-2014}.} 
 
 \section{Observational Implications}
 \label{sec:observations}
@@ -442,35 +450,35 @@ $1\times 10^{14}$\hMsun and velocity dispersion $650$\kms was reported
 to feature a displacement between its baryonic (hot gas) and dark
 matter components. 
 
-Our estimate is based on large N-body DM-only cosmological
+Our estimate is based on large N-body dark matter only cosmological
 simulation. We estimate the distribution of projected displacements
-between the dominant DM clumps in two kinds of systems; groups with circular
-velocities $300\kms<V_{\rm c}<700\kms$ and clusters with $V_{\rm
+between the dominant DM clumps in two kinds of systems; groups with
+circular velocities $300\kms<V_{\rm c}<700\kms$ and clusters with $V_{\rm
   c}>700$\kms. We report these results at four different redshifts
 $z=0.0,0.25,0.5$ and $10$.
 
-We find that a fraction of $XX\pm XX\%$ of the halos in the group
-sample can present a displacement equal or larger than the observed displacement
-for \bullg. We also present these results in terms of the ratio of the
-circular velocities of the sub-halo to the host halo to find that the
-system \bullg is found within the expected parameter space spanned by
-the simulation. 
+We find that a fraction of $50\%$-$60\%$ of the halos in the group
+sample present displacement equal or larger than the observed displacement
+for \bullg. For halos in the cluster sample this fraction increases to
+$80\%$-$85\%$. 
 
-Next we describe the geometry of the collision by the angle between
+
+We also describe the collision geometry by the angle between
 the position and velocity vectors of the sub-halo with respect to the
 host. This allows us to separate three different instances: the
-sub-halo crosses the virial radio of the host, the sub-halo goes
-through the center of the host and the secondary
-infall after reaching apogee. 
+sub-halo crossing the host virial radius, the sub-halo going
+through the host's center and the secondary infall after reaching
+apogee.  
 
-From this analysis we estimate a the integrated distribution of the
-displacements between the DM and the baryonic component. In this case
-we find that a fraction of $XX \pm XX\%$ halos in the group sample
-should present displacements equal or larger than those observed for
-the Bullet-Group \bullg. 
+From this analysis we derive an estimate for the displacement between
+the DM and the baryonic component. In the group sample
+$0.1\%$-$1.0\%$ of the halos show a displacement equal or larger than 
+the  measurements of \bullg by \citep{Gastaldello}. In the cluster
+sample this fraction rises to $4\%$-$10\%$.
+
 
 The results we present here can be used as a potential test of
-$\Lambda CDM$. (Comments about Gaels results on multimodal groups).
+$\Lambda$CDM. [...]
 
 
 The CosmoSim database used in this paper is a service by the
