--- a/paper/ms.tex
+++ b/paper/ms.tex
@@ -343,7 +343,7 @@ $c\approx 6$ \citep{Hayashi2006}.
 \end{figure*}
 
 
-Figure \ref{fig:} presents the geometry of the bullet groups using the 
+Figure \ref{fig:geometry} presents the geometry of the bullet groups using the 
 variables $\mu$ and $D_{\rm off}$. The first evident feature is that
 most of the configurations have $|mu|>0.9$ ($\theta\leq 30^{\circ}$),
 meaning that most of the collisions can be described as a head-on while
