--- a/paper/references.bib
+++ b/paper/references.bib
@@ -1,3 +1,207 @@
+@ARTICLE{Dahle2013,
+   author = {{Dahle}, H. and {Sarazin}, C.~L. and {Lopez}, L.~A. and {Kouveliotou}, C. and 
+	{Patel}, S.~K. and {Rol}, E. and {van der Horst}, A.~J. and 
+	{Fynbo}, J. and {Wijers}, R.~A.~M.~J. and {Burrows}, D.~N. and 
+	{Gehrels}, N. and {Grupe}, D. and {Ramirez-Ruiz}, E. and {Micha{\l}owski}, M.~J.
+	},
+    title = "{The Burst Cluster: Dark Matter in a Cluster Merger Associated with the Short Gamma-Ray Burst, GRB 050509B}",
+  journal = {\apj},
+archivePrefix = "arXiv",
+   eprint = {1305.4660},
+ primaryClass = "astro-ph.CO",
+ keywords = {galaxies: clusters: individual: ZwCl 1234.0+02916 NSC J123610+285901, gamma-ray burst: individual: GRB 050509B},
+     year = 2013,
+    month = jul,
+   volume = 772,
+      eid = {23},
+    pages = {23},
+      doi = {10.1088/0004-637X/772/1/23},
+   adsurl = {http://adsabs.harvard.edu/abs/2013ApJ...772...23D},
+  adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
+@ARTICLE{Dawson2012,
+   author = {{Dawson}, W.~A. and {Wittman}, D. and {Jee}, M.~J. and {Gee}, P. and 
+	{Hughes}, J.~P. and {Tyson}, J.~A. and {Schmidt}, S. and {Thorman}, P. and 
+	{Brada{\v c}}, M. and {Miyazaki}, S. and {Lemaux}, B. and {Utsumi}, Y. and 
+	{Margoniner}, V.~E.},
+    title = "{Discovery of a Dissociative Galaxy Cluster Merger with Large Physical Separation}",
+  journal = {\apjl},
+archivePrefix = "arXiv",
+   eprint = {1110.4391},
+ primaryClass = "astro-ph.CO",
+ keywords = {cosmic background radiation, dark matter, galaxies: clusters: individual: DLSCL J0916.2+2951, gravitational lensing: weak, X-rays: galaxies: clusters},
+     year = 2012,
+    month = mar,
+   volume = 747,
+      eid = {L42},
+    pages = {L42},
+      doi = {10.1088/2041-8205/747/2/L42},
+   adsurl = {http://adsabs.harvard.edu/abs/2012ApJ...747L..42D},
+  adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
+
+@ARTICLE{Merten2011,
+   author = {{Merten}, J. and {Coe}, D. and {Dupke}, R. and {Massey}, R. and 
+	{Zitrin}, A. and {Cypriano}, E.~S. and {Okabe}, N. and {Frye}, B. and 
+	{Braglia}, F.~G. and {Jim{\'e}nez-Teja}, Y. and {Ben{\'{\i}}tez}, N. and 
+	{Broadhurst}, T. and {Rhodes}, J. and {Meneghetti}, M. and {Moustakas}, L.~A. and 
+	{Sodr{\'e}}, Jr., L. and {Krick}, J. and {Bregman}, J.~N.},
+    title = "{Creation of cosmic structure in the complex galaxy cluster merger Abell 2744}",
+  journal = {\mnras},
+archivePrefix = "arXiv",
+   eprint = {1103.2772},
+ primaryClass = "astro-ph.CO",
+ keywords = {gravitational lensing: strong, gravitational lensing: weak, galaxies: clusters: individual: Abell 2744, dark matter, large-scale structure of Universe, X-rays: individual: Abell 2744},
+     year = 2011,
+    month = oct,
+   volume = 417,
+    pages = {333-347},
+      doi = {10.1111/j.1365-2966.2011.19266.x},
+   adsurl = {http://adsabs.harvard.edu/abs/2011MNRAS.417..333M},
+  adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
+@ARTICLE{Markevitch2004,
+   author = {{Markevitch}, M. and {Gonzalez}, A.~H. and {Clowe}, D. and {Vikhlinin}, A. and 
+	{Forman}, W. and {Jones}, C. and {Murray}, S. and {Tucker}, W.
+	},
+    title = "{Direct Constraints on the Dark Matter Self-Interaction Cross Section from the Merging Galaxy Cluster 1E 0657-56}",
+  journal = {\apj},
+   eprint = {astro-ph/0309303},
+ keywords = {Cosmology: Dark Matter, Galaxies: Clusters: Individual: Alphanumeric: 1E 0657-56, Galaxies: Formation, Cosmology: Large-Scale Structure of Universe},
+     year = 2004,
+    month = may,
+   volume = 606,
+    pages = {819-824},
+      doi = {10.1086/383178},
+   adsurl = {http://adsabs.harvard.edu/abs/2004ApJ...606..819M},
+  adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
+@ARTICLE{Farrar2007,
+   author = {{Farrar}, G.~R. and {Rosen}, R.~A.},
+    title = "{A New Force in the Dark Sector?}",
+  journal = {Physical Review Letters},
+   eprint = {astro-ph/0610298},
+ keywords = {Dark matter, Galaxy clusters},
+     year = 2007,
+    month = apr,
+   volume = 98,
+   number = 17,
+      eid = {171302},
+    pages = {171302},
+      doi = {10.1103/PhysRevLett.98.171302},
+   adsurl = {http://adsabs.harvard.edu/abs/2007PhRvL..98q1302F},
+  adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
+@ARTICLE{Lee2010,
+   author = {{Lee}, J. and {Komatsu}, E.},
+    title = "{Bullet Cluster: A Challenge to {$\Lambda$}CDM Cosmology}",
+  journal = {\apj},
+archivePrefix = "arXiv",
+   eprint = {1003.0939},
+ primaryClass = "astro-ph.CO",
+ keywords = {cosmology: theory, large-scale structure of universe, methods: statistical},
+     year = 2010,
+    month = jul,
+   volume = 718,
+    pages = {60-65},
+      doi = {10.1088/0004-637X/718/1/60},
+   adsurl = {http://adsabs.harvard.edu/abs/2010ApJ...718...60L},
+  adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
+
+@ARTICLE{Thompson2012,
+   author = {{Thompson}, R. and {Nagamine}, K.},
+    title = "{Pairwise velocities of dark matter haloes: a test for the {$\Lambda$} cold dark matter model using the bullet cluster}",
+  journal = {\mnras},
+archivePrefix = "arXiv",
+   eprint = {1107.4645},
+ primaryClass = "astro-ph.CO",
+ keywords = {galaxies: clusters: general, galaxies: evolution, galaxies: formation, cosmology: theory, dark matter},
+     year = 2012,
+    month = feb,
+   volume = 419,
+    pages = {3560-3570},
+      doi = {10.1111/j.1365-2966.2011.20000.x},
+   adsurl = {http://adsabs.harvard.edu/abs/2012MNRAS.419.3560T},
+  adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
+
+@ARTICLE{Lee2012,
+   author = {{Lee}, J. and {Baldi}, M.},
+    title = "{Can Coupled Dark Energy Speed up the Bullet Cluster?}",
+  journal = {\apj},
+archivePrefix = "arXiv",
+   eprint = {1110.0015},
+ primaryClass = "astro-ph.CO",
+ keywords = {cosmology: theory, large-scale structure of universe, methods: statistical},
+     year = 2012,
+    month = mar,
+   volume = 747,
+      eid = {45},
+    pages = {45},
+      doi = {10.1088/0004-637X/747/1/45},
+   adsurl = {http://adsabs.harvard.edu/abs/2012ApJ...747...45L},
+  adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
+@ARTICLE{Springel2007,
+   author = {{Springel}, V. and {Farrar}, G.~R.},
+    title = "{The speed of the `bullet' in the merging galaxy cluster 1E0657-56}",
+  journal = {\mnras},
+   eprint = {astro-ph/0703232},
+ keywords = {methods: numerical, galaxies: structure, X-rays: galaxies: clusters},
+     year = 2007,
+    month = sep,
+   volume = 380,
+    pages = {911-925},
+      doi = {10.1111/j.1365-2966.2007.12159.x},
+   adsurl = {http://adsabs.harvard.edu/abs/2007MNRAS.380..911S},
+  adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
+
+@ARTICLE{Bradac2008,
+   author = {{Brada{\v c}}, M. and {Allen}, S.~W. and {Treu}, T. and {Ebeling}, H. and 
+	{Massey}, R. and {Morris}, R.~G. and {von der Linden}, A. and 
+	{Applegate}, D.},
+    title = "{Revealing the Properties of Dark Matter in the Merging Cluster MACS J0025.4-1222}",
+  journal = {\apj},
+archivePrefix = "arXiv",
+   eprint = {0806.2320},
+ keywords = {Cosmology: Dark Matter, galaxies: clusters: individual (MACS J0025.4-1222), Cosmology: Gravitational Lensing},
+     year = 2008,
+    month = nov,
+   volume = 687,
+    pages = {959-967},
+      doi = {10.1086/591246},
+   adsurl = {http://adsabs.harvard.edu/abs/2008ApJ...687..959B},
+  adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
+@ARTICLE{Clowe2006,
+   author = {{Clowe}, D. and {Brada{\v c}}, M. and {Gonzalez}, A.~H. and 
+	{Markevitch}, M. and {Randall}, S.~W. and {Jones}, C. and {Zaritsky}, D.
+	},
+    title = "{A Direct Empirical Proof of the Existence of Dark Matter}",
+  journal = {\apjl},
+   eprint = {astro-ph/0608407},
+ keywords = {Cosmology: Dark Matter, galaxies: clusters: individual (1E 0657-558), Cosmology: Gravitational Lensing},
+     year = 2006,
+    month = sep,
+   volume = 648,
+    pages = {L109-L113},
+      doi = {10.1086/508162},
+   adsurl = {http://adsabs.harvard.edu/abs/2006ApJ...648L.109C},
+  adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
 @ARTICLE{Riebe2013,
    author = {{Riebe}, K. and {Partl}, A.~M. and {Enke}, H. and {Forero-Romero}, J. and 
 	{Gottl{\"o}ber}, S. and {Klypin}, A. and {Lemson}, G. and {Prada}, F. and 
